--- a/PrestaLabDICIS/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms.csproj
+++ b/PrestaLabDICIS/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
   </ItemGroup>
