--- a/PrestaLabDICIS/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms.csproj
+++ b/PrestaLabDICIS/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms/PrestaLabDICIS.UIForms.csproj
@@ -12,7 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PrestaLabDICIS.Common\PrestaLabDICIS.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Views\LoginPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ProductsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
